# mft2bodyfile

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/intern/: bodyfile1_line.rs  complete_mft_entry.rs  error.rs  filename_info.rs  mod.rs  preprocessed_mft.rs  preprocessed_mft_entry.rs  timestamp_tuple.rs  usnjrnl.rs
src/usnjrnl/: mod.rs  usn_reader_error.rs  usn_reason.rs  usn_record.rs  usnjrnl_reader.rs
tests/: test_control.rs
tests/data/: README.md
tests/data/control/: MFT
