[package]
name = "mft2bodyfile"
version = "0.5.1"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
description = "parses an $MFT file to bodyfile (stdout)"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mft = "0.5.3"
winstructs = "0.3.0"
anyhow = "1.0.40"
argparse = "0.2.2"
simplelog = "0.10.0"
likely_stable = "0.1.2"
log = "0.4.14"
num = "0.4.0"
indicatif = "0.16.2"
