[package]
name = "mft2bodyfile"
version = "0.6.9"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
description = "parses an $MFT file to bodyfile (stdout)"
homepage = "https://www.github.com/janstarke/mft2bodyfile"
license-file = "LICENSE"

[lib]
name = "libmft2bodyfile"
path = "src/lib.rs"

[[bin]]
name = "mft2bodyfile"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mft = "0.5.3"
winstructs = "0.3.0"
anyhow = "1.0.40"
clap = "2"
simplelog = "0.10.0"
likely_stable = "0.1.2"
log = "0.4.14"
num = "0.4.0"
indicatif = "0.16.2"
chrono = "0.4"

usnjrnl = {version="0.2", default-features=false}
bodyfile = "0.1"

[dev-dependencies]
more-asserts = "0.2.1"

#[profile.dev]
#debug = true
#split-debuginfo = "packed"